# bedrock-file-chat

./: .env.example  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
assets/styles/: layout.css
src/: app.py  aws_service.py  layout.py  main.py
